--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
         }
         canvas {
-            background: #000;
+            background: #003300;
             display: block;
             margin: auto;
         }
@@ -136,7 +136,7 @@
     </div>
     <div id="rotateMessage">
         请旋转您的设备以获得更好的游戏体验。
-        s
+        📱 Please rotate your screen for a better experience! 🔄
     </div>
 
 
@@ -179,7 +179,7 @@ window.addEventListener("load", checkOrientation);
 window.addEventListener("resize", checkOrientation);
 
         function getRandomColor() {
-            const colors = ["red", "blue", "yellow", "purple", "orange", "pink", "white"];
+            const colors = ["red","yellow","orange",];
             return colors[Math.floor(Math.random() * colors.length)];
         }
 
