--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game</title>
+    <title>Snake Game 3D</title>
     <style>
         body {
             text-align: center;
@@ -93,7 +93,7 @@
     </style>
 </head>
 <body>
-    <h1>Snake Game</h1>
+    <h1>Snake Game 2D</h1>
     <div id="score">🍎: 0</div>
     <canvas id="gameCanvas"></canvas>
     <br>
